--- a/okhttp-dnsoverhttps/build.gradle
+++ b/okhttp-dnsoverhttps/build.gradle
@@ -1,13 +1,9 @@
-applyOsgi(this)
-
-jar {
-  // MANIFEST.MF, including OSGi bnd instructions.
-  bnd '''
-  Export-Package: okhttp3.dnsoverhttps
-  Automatic-Module-Name: okhttp3.dnsoverhttps
-  Bundle-SymbolicName: com.squareup.okhttp3.dnsoverhttps
-  '''
-}
+Projects.applyOsgi(
+  project,
+  "Export-Package: okhttp3.dnsoverhttps",
+  "Automatic-Module-Name: okhttp3.dnsoverhttps",
+  "Bundle-SymbolicName: com.squareup.okhttp3.dnsoverhttps"
+)
 
 dependencies {
   api project(':okhttp')
