--- a/okhttp-tls/build.gradle
+++ b/okhttp-tls/build.gradle
@@ -1,14 +1,11 @@
 apply plugin: 'me.champeau.gradle.japicmp'
-applyOsgi(this)
 
-jar {
-  // MANIFEST.MF, including OSGi bnd instructions.
-  bnd '''
-  Export-Package: okhttp3.tls
-  Automatic-Module-Name: okhttp3.tls
-  Bundle-SymbolicName: com.squareup.okhttp3.tls
-  '''
-}
+Projects.applyOsgi(
+  project,
+  "Export-Package: okhttp3.tls",
+  "Automatic-Module-Name: okhttp3.tls",
+  "Bundle-SymbolicName: com.squareup.okhttp3.tls"
+)
 
 dependencies {
   api Dependencies.okio
