--- a/okhttp-urlconnection/build.gradle
+++ b/okhttp-urlconnection/build.gradle
@@ -1,17 +1,16 @@
 apply plugin: 'me.champeau.gradle.japicmp'
-applyOsgi(this)
 
 def mainProj = project(':okhttp')
-jar {
-  // MANIFEST.MF, including OSGi bnd instructions.
-  // urlconnection needs to be an OSGi fragment because its package name is the same as okhttp3's.
-  bnd """
+
+Projects.applyOsgi(
+  project,
+  """
   Fragment-Host: com.squareup.okhttp3; bundle-version="\${range;[==,+);\${version_cleanup;${mainProj.version}}}"
   Automatic-Module-Name: okhttp3.urlconnection
   Bundle-SymbolicName: com.squareup.okhttp3.urlconnection
   -removeheaders: Private-Package
   """
-}
+)
 
 dependencies {
   api mainProj
