Disable publish action in forked repository

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ env:
 jobs:
   publish:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.repository == 'square/okhttp' && github.ref == 'refs/heads/master'
 
     steps:
       - name: Checkout
