--- a/okhttp-sse/build.gradle
+++ b/okhttp-sse/build.gradle
@@ -1,14 +1,11 @@
 apply plugin: 'me.champeau.gradle.japicmp'
-applyOsgi(this)
 
-jar {
-  // MANIFEST.MF, including OSGi bnd instructions.
-  bnd '''
-  Export-Package: okhttp3.sse
-  Automatic-Module-Name: okhttp3.sse
-  Bundle-SymbolicName: com.squareup.okhttp3.sse
-  '''
-}
+Projects.applyOsgi(
+  project,
+  "Export-Package: okhttp3.sse",
+  "Automatic-Module-Name: okhttp3.sse",
+  "Bundle-SymbolicName: com.squareup.okhttp3.sse"
+)
 
 dependencies {
   api project(':okhttp')
@@ -30,7 +27,7 @@ afterEvaluate { project ->
 }
 
 task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
-  oldClasspath = files(baselineJar(project, baselineVersion))
+  oldClasspath = files(Projects.baselineJar(project))
   newClasspath = files(jar.archivePath)
   onlyBinaryIncompatibleModified = true
   failOnModification = true
