--- a/okhttp-urlconnection/build.gradle
+++ b/okhttp-urlconnection/build.gradle
@@ -1,17 +1,14 @@
 apply plugin: 'me.champeau.gradle.japicmp'
-applyOsgi(this)
 
 def mainProj = project(':okhttp')
-jar {
-  // MANIFEST.MF, including OSGi bnd instructions.
-  // urlconnection needs to be an OSGi fragment because its package name is the same as okhttp3's.
-  bnd """
-  Fragment-Host: com.squareup.okhttp3; bundle-version="\${range;[==,+);\${version_cleanup;${mainProj.version}}}"
-  Automatic-Module-Name: okhttp3.urlconnection
-  Bundle-SymbolicName: com.squareup.okhttp3.urlconnection
-  -removeheaders: Private-Package
-  """
-}
+
+Projects.applyOsgi(
+  project,
+  "Fragment-Host: com.squareup.okhttp3; bundle-version=\"\${range;[==,+);\${version_cleanup;${mainProj.version}}}\"",
+  "Automatic-Module-Name: okhttp3.urlconnection",
+  "Bundle-SymbolicName: com.squareup.okhttp3.urlconnection",
+  "-removeheaders: Private-Package"
+)
 
 dependencies {
   api mainProj
@@ -33,7 +30,7 @@ afterEvaluate { project ->
 }
 
 task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
-  oldClasspath = files(baselineJar(project, baselineVersion))
+  oldClasspath = files(Projects.baselineJar(project))
   newClasspath = files(jar.archivePath)
   onlyBinaryIncompatibleModified = true
   failOnModification = true
