--- a/okhttp/build.gradle
+++ b/okhttp/build.gradle
@@ -1,27 +1,19 @@
 apply plugin: 'me.champeau.gradle.japicmp'
-applyOsgi(this)
 
-jar {
-  // MANIFEST.MF, including OSGi bnd instructions.
-  // We export okhttp3.internal for our own modules use.
-  // The packages of all optional dependencies must be explicitly specified.
-  bnd '''
-  Export-Package: \
-  okhttp3,\
-  okhttp3.internal.*;okhttpinternal=true;mandatory:=okhttpinternal
-  Import-Package: \
-  android.*;resolution:=optional,\
-  com.oracle.svm.core.annotate;resolution:=optional,\
-  dalvik.system;resolution:=optional,\
-  org.conscrypt;resolution:=optional,\
-  org.bouncycastle.*;resolution:=optional,\
-  org.openjsse.*;resolution:=optional,\
-  sun.security.ssl;resolution:=optional,\
-  *
-  Automatic-Module-Name: okhttp3
-  Bundle-SymbolicName: com.squareup.okhttp3
-  '''
-}
+Projects.applyOsgi(
+  project,
+  "Export-Package: okhttp3,okhttp3.internal.*;okhttpinternal=true;mandatory:=okhttpinternal",
+  "Import-Package: " +
+    "android.*;resolution:=optional," +
+    "com.oracle.svm.core.annotate;resolution:=optional," +
+    "dalvik.system;resolution:=optional," +
+    "org.conscrypt;resolution:=optional," +
+    "org.bouncycastle.*;resolution:=optional," +
+    "org.openjsse.*;resolution:=optional," +
+    "sun.security.ssl;resolution:=optional,*",
+  "Automatic-Module-Name: okhttp3",
+  "Bundle-SymbolicName: com.squareup.okhttp3"
+)
 
 sourceSets {
   main.java.srcDirs += "$buildDir/generated/sources/java-templates/java/main"
@@ -127,7 +119,7 @@ afterEvaluate { project ->
 }
 
 task japicmp(type: me.champeau.gradle.japicmp.JapicmpTask, dependsOn: 'jar') {
-  oldClasspath = files(baselineJar(project, baselineVersion))
+  oldClasspath = files(Projects.baselineJar(project))
   newClasspath = files(jar.archivePath)
   onlyBinaryIncompatibleModified = true
   failOnModification = true
