JDK 17 CI Build (#6864)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -225,9 +225,9 @@ jobs:
       - name: Run Checks
         run: ./gradlew test -Dokhttp.platform=corretto
 
-  testopenjdk16:
+  testopenjdk17:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' || contains(github.event.pull_request.labels.*.name, 'jdk17')
 
     steps:
       - name: Checkout
@@ -243,7 +243,7 @@ jobs:
           java-version: 11
 
       - name: Run Checks
-        run: ./gradlew test -Dtest.java.version=16
+        run: ./gradlew test -Dtest.java.version=17
 
   testwindows:
     runs-on: windows-latest
