--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ buildscript {
 allprojects {
   group = 'com.squareup.okhttp3'
   project.ext.artifactId = Projects.publishedArtifactId(project.name)
-  version = '5.0.0-SNAPSHOT'
+  version = '5.0.0-alpha.3'
 
   repositories {
     mavenCentral()
