Replace ADOPTOPENJDK with AZUL to solve build failure

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.jvmargs='-Dfile.encoding=UTF-8'
 android.enableJetifier=true
 android.useAndroidX=true
+org.gradle.jvm.toolchain.install.zulu.baseUri=https://api.foojay.io/
